# mhpl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
HPL2/core/: CMakeLists.txt
HPL2/core/cmake/: BoilerPlate.cmake  UtilityFunctions.cmake
HPL2/core/include/: BuildID_HPL2_0.h
HPL2/core/include/ai/: AINodeContainer.h  AStar.h  StateMachine.h
HPL2/core/include/engine/: Engine.h  Updater.h
HPL2/core/include/graphics/: Animation.h  AnimationTrack.h  Bitmap.h  Bone.h  BoneState.h  Color.h  DecalCreator.h  FontData.h  FrameBase.h  FrameBitmap.h  FrameBuffer.h  FrameSubImage.h  FrameTexture.h  GPUProgram.h  GPUShader.h  Graphics.h  GraphicsTypes.h  LowLevelGraphics.h  Material.h  MaterialType.h  MaterialType_BasicSolid.h  MaterialType_BasicTranslucent.h  MaterialType_Decal.h  MaterialType_Water.h  Mesh.h  MeshCreator.h  OcclusionQuery.h  PostEffect.h  PostEffectComposite.h  PostEffect_Bloom.h  PostEffect_ColorConvTex.h  PostEffect_ImageTrail.h  PostEffect_RadialBlur.h  ProgramComboManager.h  RenderFunctions.h  RenderList.h  Renderable.h  Renderer.h  RendererDeferred.h  RendererSimple.h  (+7 more)
HPL2/core/include/gui/: Gui.h  GuiSet.h  WidgetMenu.h
HPL2/core/include/impl/: BitmapLoaderDevil.h  BitmapLoaderDevilDDS.h  BitmapLoaderDevilMisc.h  CGProgram.h  CGShader.h  CharacterBodyNewton.h  CollideShapeNewton.h  FmodSoundChannel.h  FmodSoundData.h  FrameBufferGL.h  GLSLProgram.h  (+49 more)
HPL2/dependencies/OALWrapper/: CMakeLists.txt
HPL2/tools/: CMakeLists.txt  LuxBasePersonal.h
HPL2/tools/editors/: CMakeLists.txt
amnesia/src/: CMakeLists.txt
amnesia/src/CacheFileDateFix/: CacheFileDateFix.cpp
amnesia/src/game/: CMakeLists.txt  LuxAchievementHandler.cpp  LuxAchievementHandler.h  LuxArea.cpp  LuxArea.h  LuxAreaNodes.cpp  LuxAreaNodes.h  LuxArea_Examine.cpp  LuxArea_Examine.h  LuxArea_Flashback.cpp  LuxArea_Flashback.h  LuxArea_Insanity.cpp  LuxArea_Insanity.h  LuxArea_Ladder.cpp  LuxArea_Ladder.h  LuxArea_Liquid.cpp  LuxArea_Liquid.h  LuxArea_Rope.cpp  LuxArea_Rope.h  LuxArea_Script.cpp  LuxArea_Script.h  LuxArea_Sign.cpp  LuxArea_Sign.h  LuxArea_SlimeDamage.cpp  LuxArea_SlimeDamage.h  LuxArea_Sticky.cpp  LuxArea_Sticky.h  LuxBase.cpp  LuxBase.h  LuxBasePersonal.h  LuxCommentaryIcon.cpp  LuxCommentaryIcon.h  LuxCompletionCountHandler.cpp  LuxCompletionCountHandler.h  LuxConfigHandler.cpp  LuxConfigHandler.h  LuxCredits.cpp  LuxCredits.h  LuxCritter_Bug.cpp  LuxCritter_Bug.h  (+173 more)
amnesia/src/launcher/: CMakeLists.txt  Main.cpp  QualityChooser.cpp  QualityChooser.h
amnesia/src/launcher-macosx/: CMakeLists.txt  HPLMinimal.mm  LauncherAppDelegate.h  LauncherAppDelegate.mm
(+356 files in other folders)
